2007-09-25  Herbert Xu <herbert@gondor.apana.org.au>

	* Do not expand tilde in parameter expansion within quotes.

2007-09-24  Herbert Xu <herbert@gondor.apana.org.au>

	* Do not quote back slashes in parameter expansions outside quotes.
	* Perform tilde expansion in all parameter expansion words.
	* Remove superfluous arinest test in CENDQUOTE.
	* Remove superfluous arinest test for dqvarnest.
	* Remove superfluous dblquote settings when ending arith.
	* Remove arithmetic expansion collapsing at parse time.

2007-09-22  Oleg Verych <olecom@flower.upol.cz>

	* White space fixes for test(1).
	* Use direct comparison instead of strcmp in test(1).

2007-09-22  Herbert Xu <herbert@gondor.apana.org.au>

	* Move flushall to the point just before _exit.

2007-09-21  Denis Vlasenko <vda.linux@googlemail.com>

	* Restore foreground process group on exit.

2007-07-12  Herbert Xu <herbert@gondor.apana.org.au>

	* Release 0.5.4.

2007-05-12  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix redirect restore on closed file descriptors.
	* Size optimisations in redir.c.

2007-05-06  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed unnecessary inclusion of redir.h from parser.c.
	* Invoke sh_error on error in copyfd.
	* Use dup2 instead of copyfd in evalbackcmd.
	* Replace copyfd by savefd and dup2.
	* Removed redundant CLOEXEC calls.

2007-05-05  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed typo in parser.h comment.

2007-04-28  Dan Nicholson <dbn.lists@gmail.com>

	* Set LC_COLLATE for sort in mkbuiltin.

2006-10-22  Gerrit Pape <pape@smarden.org>

	* Fixed command -v segmentation fault.

2006-10-13  Alexey Gladkov <legion@altlinux.org>

	* Check return code for getgroups and fwrite.

2006-10-04  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed inverted char class matching.

2006-05-23  Alexey Gladkov <legion@altlinux.org>

	* Added --with-libedit option to configure.

2006-03-29  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed useless parsebackquote flag.