@@ -39,7 +39,7 @@
 extern const char snlfmt[];
 extern const char spcstr[];
 extern const char dolatstr[];
-#define DOLATSTRLEN 4
+#define DOLATSTRLEN 6
 extern const char illnum[];
 extern const char homestr[];
 
